# RAiDER

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  HRRR_tropo_20181113T230000_std.nc  HRRR_tropo_20200101T120000_ztd.nc  Installation.md  LICENSE  MANIFEST.in  README.md  README.txt  WeatherModels.md  config.yml  constants.py  delay.py  demdownload.py  ecmwf.py  ecmwf_downloader_fromWeb.py  environment-dev.yml  environment-isce3.yml  environment.yml  era.py  era5.py  erai.py  extra.py  grib.py  hrrr.py  index.html  interpolator.py  issues.txt  losreader.py  merra2.py  mkdocs.yml  modellevels.py  models.py  netcdf.py  objects.inv  plots.py  pyproject.toml  (+12 more)
.circleci/: config.yml  fix_coverage_paths.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: autoformat.yml  autopep8.yml  build.yml  changelog.yml  deploy-docs.yml  labeled-pr.yml  release.yml  reusable-ruff.yml  tag.yml  test.yml
Geometry/cpp/: CMakeLists.txt
Installing_from_source/: index.html
WeatherModels/: index.html
doc/: Basic setup and testing.ipynb  README.txt  environment.yml  introToRAiDER.ipynb  requirements.txt
docs/: Installing_from_source.md  WeatherModels.md  index.md  macros.py  reference.md  reference_pwm.md  reference_td.md  tutorials.md
models/: allowed.py  ecmwf.py  era5.py  grib.py  hrrr.py  merra2.py  weatherModel.py  wrf.py
raider/: pyvenv.cfg
raider/Scripts/: activate  activate.bat  calcDelays.py-script.py  calcDelaysGUNW.py-script.py  downloadGNSS.py-script.py  generateGACOSVRT.py-script.py  raider.py-script.py  raiderCombine.py-script.py  raiderDownloadGNSS.py-script.py  raiderStats.py-script.py
reference/: index.html
reference_td/: index.html
search/: search_index.json
test/: Geo2rdr_plot3D_test.py  Geo2rdr_test.py  Ray_original_tests.py  __init__.py  _checkArgs.py  _entrypoints.py  _scenario_1.py  _scenario_2.py  conftest.py  data4tests.py  fake_raytracing  td_lookvecs_lengths_steps.pik  test_GUNW.py  test_Geo2rdr_plot3D.py  test_HRRR_ztd.py  test_cdsAPI.py  test_checkArgs.py  test_chunking.py  test_credentials.py  test_datelist.py  test_delay.py  test_delayFcns.py  test_dem.py  test_downloadGNSS.py  test_downloaders.py  test_entrypoints.py  test_fcns.py  test_generate_config.py  test_geometry.py  test_gnss.py  test_hdf5_parallel.py  test_integration.py  test_interpolator.py  test_intersect.py  test_ioFcns.py  test_issue_333.py  test_library.py  test_llreader.py  test_lookvectors.py  test_losreader.py  (+32 more)
test/cli/: _argument_parsers.py  test_argument_parsers.py  test_raiderDelay.py  test_validators.py
test/credentials/: test_createFile.py  test_envVars.py  test_updateFalse.py  test_updateTrue.py
test/gunw_test_data/: S1-GUNW-A-R-064-tops-20210723_20210711-015001-35393N_33512N-PP-6267-v2_0_4.json  gunw_schema.json
test/los_files/: test_orbit.EOF  test_orbit.txt
test/orbit_files/: S1_orbit_example.EOF
test/pytest/: __init__.py  test_interpolator.py  test_util.py
test/scenario_0/: data.pik  lat.rdr.aux.xml  lon.rdr.aux.xml  pickledWeatherModel.pik  small_dem.tif  station_file.txt  weather_model_data.csv  wmtype
test/scenario_1/: ERA5_wet_true.envi  HRRR_tropo_20200101T120000_ztd.nc  hydro.envi  lat.rdr  pickledWeatherModel.pik  raider_example_1.yaml  wet.envi
test/scenario_2/: ERA5_true_GNSS.csv  hgt.rdr.aux.xml  lon.rdr  raider_example_2.yaml  stations.csv  stations1.csv  stations2.csv  stations_with_Delays.csv  wmtype
test/scenario_3/: HRRR_tropo_20181113T230000_ray.nc  HRRR_tropo_20181113T230000_std.nc  S1_sv_file.txt  raider_example_3.yaml  raider_example_3_proj.yaml  raider_example_4.yaml
test/scenario_4/: lat.rdr  lat.rdr.aux.xml  lat.rdr.vrt  lon.rdr.aux.xml  los.hdr  los.rdr  los.rdr.vrt  los.rdr.xml  warpedDEM.hdr  wmtype
test/scenario_5/: hgt.hdr  lon.rdr.vrt  temp.yaml  warpedDEM.dem  warpedDEM.dem.vrt  wmtype  wrfout_d01_2010-06-25  wrfplev_d01_2010-06-25
test/scenario_6/: lat.hdr  lat.rdr  lat.rdr.aux.xml  lon.hdr  lon.rdr  lon.rdr.aux.xml  stations.csv  warpedDEM.dem  warpedDEM.dem.aux.xml  wmtype
test/scenario_7/: ERA-5_2018_03_27_T13_00_00.nc  lon.hdr  wmtype
test/scenario_8/: lon.rdr  wmtype
test/scenario_9/: station_file.txt  wmtype
test/test_geom/: lat.rdr.vrt  lon.rdr.aux.xml  lon.rdr.vrt  los.rdr.aux.xml  los.rdr.vrt  test_era5.nc  test_era5t.nc  test_erai.nc  warpedDEM.dem
test/weather_files/: ERA-5_2019_11_17_T20_51_58.nc  ERA-5_2019_11_17_T20_51_58_5S_2S_40W_37W.nc  ERA-5_2019_11_17_T20_51_58_5S_2S_41W_37W.nc  ERA-5_2020_01_30_T13_52_45.nc  ERA-5_2020_01_30_T13_52_45_14N_18N_102W_99W.nc  ERA-5_2020_01_30_T13_52_45_32N_35N_119W_115W.nc  ERA-5_2020_01_30_T13_52_45_32N_35N_119W_116W.nc  ERA-5_2020_01_30_T13_52_45_32N_35N_120W_115W.nc  ERA-5_2020_01_30_T13_52_45_32N_35N_120W_116W.nc  ERA-5_2020_01_30_T13_52_45_33N_35N_119W_117W.nc  ERA-5_2022_08_29_T17_00_01.nc  ERA-5_2022_08_29_T17_00_01_69N_73N_159W_152W.nc  ERA-5_2022_08_29_T17_00_01_69N_73N_159W_153W.nc
test/weather_model/: test_downloaders.py  test_era5t.nc  test_processWM.py  test_weather_model.py
test/weather_model_tests/: test_downloaders.py  test_processWM.py  test_weatherModel.py
tools/RAiDER/: __init__.py  __main__.py  aws.py  checkArgs.py  constants.py  delay.py  delayFcns.py  dem.py  demdownload.py  downloadGNSSDelays.py  downloadWM.py  extra.py  fileIO.py  geometry.py  getStationDelays.py  interpolate.cp39-win_amd64.pyd  interpolator.py  ioFcns.py  llreader.py  logger.py  losreader.py  makePoints.cp39-win_amd64.pyd  makePoints.pyx  makePoints_py.py  mathFcns.py  plots.py  prepFromAria.py  prepareCube.py  processWM.py  raiderstats.py  rayGenerator.py  rays.py  runDelays.py  setup.py  (+10 more)
tools/bindings/geometry/cpp/: CMakeLists.txt
tools/bindings/geometry/cpp/classes/Geometry/: Geometry.cc
tools/bindings/geometry/cpp/classes/Orbit/: Orbit.h  StateVector.h
tools/bindings/geometry/cpp/classes/Utility/: Ellipsoid.h  Point.h
tutorials/: index.html
utils/: checkArgs.py  constants.py  demdownload.py  downloadWM.py  fileIO.py  llreader.py  losreader.py  util.py
(+146 files in other folders)
